Dynamic + optional slot ordering