@@ -2,6 +2,8 @@ package com.splatage.wild_economy.config;
 
 import com.splatage.wild_economy.store.model.StoreCategory;
 import com.splatage.wild_economy.store.model.StoreProduct;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
@@ -10,8 +12,8 @@ public record StoreProductsConfig(
     Map<String, StoreProduct> products
 ) {
     public StoreProductsConfig {
-        categories = Map.copyOf(Objects.requireNonNull(categories, "categories"));
-        products = Map.copyOf(Objects.requireNonNull(products, "products"));
+        categories = Collections.unmodifiableMap(new LinkedHashMap<>(Objects.requireNonNull(categories, "categories")));
+        products = Collections.unmodifiableMap(new LinkedHashMap<>(Objects.requireNonNull(products, "products")));
     }
 
     public StoreCategory category(final String categoryId) {
